# JackalTourGuide

./: .gitignore  .~lock.local.csv#  README.md  bag_filter.sh  binary.ply  clear.sh  error_plot.py  local.csv  localization_test.sh  make_tour.sh  make_world.sh  master.sh  master2.sh  myhal_test.sh  path_diff.py  pytest.sh  run_map.sh  run_mapping.sh  run_nav.sh  run_sim.sh  run_tour.sh  sandbox.sh  shutdown.sh  startup.py  test.py  test_hugues.sh  trajectory_plot.py  visualize_bag.sh  worldgen3.sh  worldgen_test.sh
scripts/: clear.sh  (+8 more)
src/custom_plugins/: CMakeLists.txt
src/custom_plugins/src/: TrajectoryActorPlugin.cc  TrajectoryActorPlugin.hh  actor_plugin.cpp  actor_plugin.hh  boids_plugin.cpp  boids_plugin.hh  random_place_plugin.cpp  random_place_plugin.hh  randomwalk_plugin.cpp  randomwalk_plugin.hh  world_plugin.cpp  world_plugin.hh
src/dashboard/: CMakeLists.txt  README.md  __init__.py
src/dashboard/src/: .dashboard.py.swp  .data_processing.py.swp  __init__.py  assessor.py  dashboard.py  data_processing.py  math_utilities.py  meta_data.py  plot_utilities.py  query.py  run_handler.py
src/dashboard/src/utilities/: .query.py.swp  __init__.py  bag_tools.py  math_utilities.py  plot_utilities.py  query.py
src/jackal_velodyne/: CMakeLists.txt  package.xml
src/jackal_velodyne/launch/: amcl_demo.launch  full_spawn.launch  hugues_test.launch  jackal_testing.launch  mapping.launch  master.launch  myhal_sim_test.launch  p1.launch  p2.launch  sandbox.launch  tour_maker.launch  visualize.launch  worldgen3.launch
src/jackal_velodyne/launch/include/: amcl.launch  control.launch  full_filter.launch  gmapping.launch  gmapping.rviz  move_base.launch  pointcloud2laser.launch  pointcloud_filter.launch  pointcloud_filter2.launch  run.rviz  visualize.rviz
src/jackal_velodyne/launch/master.launch ~/: Cleanup\ Code
src/jackal_velodyne/maps/: 10x10box.pgm  10x10box.yaml  map_test1.pgm  map_test1.yaml  map_test2.pgm  map_test2.yaml  myhal_map1.pgm  myhal_map1.yaml
src/jackal_velodyne/msg/: tuple.msg
src/jackal_velodyne/params/: base_local_planner_params.yaml  costmap_common_params.yaml  jackal_extras.yaml  move_base_params.yaml  simulation_params.yaml
src/jackal_velodyne/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
src/jackal_velodyne/params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
src/jackal_velodyne/src/: camera_controller.cpp  camera_controller.hh  data_processing.cpp  diagnostics.cpp  diagnostics.hh  get_set_robot_position.cpp  graphs.h  navigation_goals.cpp  pcl_filter_nodelet.cpp  pcl_filter_nodelet.h  pointcloud_to_laserscan_node.cpp  pointcloud_to_laserscan_nodelet.cpp  pointcloud_to_laserscan_nodelet.h  points_and_pose.cpp  tf_publisher.cpp  tour_maker.cpp  worldgen2.cpp  worldgen3.cpp  worldgen3.h  xml_writer2.h
src/jackal_velodyne/src/include/: empty_template.txt  template.txt
src/jackal_velodyne/tours/: A_tour.bag  B_tour.bag  C_tour.bag  D_tour.bag  E_tour.bag  F_tour.bag  V2_tour.bag  out_and_back_tour.bag
src/jackal_velodyne/urdf/: VLP-16.urdf.xacro  accessories.urdf.xacro  first_person.urdf.xacro  jackal_velodyne.urdf (original).xacro  jackal_velodyne.urdf.xacro  viewbot.gazebo.xacro  viewbot.urdf.xacro
src/jackal_velodyne/worlds/: cam_dump.world  myhal.world  myhal_sand.world  out.world  out2.world  sandbox.world  worldgen3.world
src/model_plugins/: CMakeLists.txt  package.xml
src/model_plugins/src/: README.md  utilities.cpp  utilities.hh  vehical_plugin.cpp  vehical_plugin.hh  vehicle_plugin.cpp  vehicle_plugin.hh  vehicles.cpp  vehicles.hh
src/model_plugins/src/params/: vehicle_params.txt
src/myhal_simulator/: CMakeLists.txt  package.xml
src/myhal_simulator/models/20x20box/: model.sdf
src/myhal_simulator/models/simple_door2/: model.sdf
src/myhal_simulator/params/: actor_params.yaml  animation_params.yaml  camera_params.yaml  common_vehicle_params.yaml  model_params.yaml  plugin_params.yaml  room_params.yaml  room_params_V2.yaml  scenario_params.yaml  scenario_params_V2.yaml  vehicle_params.txt
src/myhal_simulator/params/default_params/: camera_params.yaml  room_params_V2.yaml  scenario_params_V2.yaml
src/myhal_simulator/src/: README.md  bag_creator.cpp  bag_diagnostics.cpp  bag_tools.hh  bag_tools.py  custom_camera.cpp  custom_camera.hh  custom_velodyne.cpp  custom_velodyne.hh  data_processing.cpp  data_processing.hh  data_processing.py  director.cpp  director.hh  entities_test.cpp  hugues_diagnostics.cpp  lidar_listener.cpp  lidar_listener.hh  math_utilities.py  navigation_goals_V2.cpp  plot_utilities.py  post_classifier.cpp  post_classifier.hh  process_bag.cpp  process_bag.hh  puppeteer.cpp  puppeteer.hh  quadtree.cpp  quadtree.hh  sdfstring.cpp  sdfstring.hh  simulator_plugin.cpp  simulator_plugin.hh  tests.cpp  utilities.cpp  utilities.hh  vehicle_plugin.cpp  vehicle_plugin.hh  vehicles.cpp  vehicles.hh  (+4 more)
src/myhal_simulator/src/include/: costmap.cpp  costmap.hh  flowfield.cpp  flowfield.hh  frame.hh  parse_tour.cpp  parse_tour.hh  priority_queue.hh  quadtree.hh  sdfstring.cpp  utilities.cpp  utilities.hh
src/myhal_simulator/tours/A_tour/: map.txt
src/myhal_simulator/tours/B_tour/: map.txt
src/myhal_simulator/tours/C_tour/: map.txt
src/myhal_simulator/tours/D_tour/: map.txt
src/myhal_simulator/tours/E_tour/: map.txt
src/myhal_simulator/tours/F_tour/: map.txt
src/myhal_simulator/tours/G_tour/: map.txt
src/myhal_simulator/tours/H_tour/: map.txt
src/myhal_simulator/tours/I_tour/: map.txt
src/myhal_simulator/tours/J_tour/: map.txt
src/myhal_simulator/tours/K_tour/: map.txt
src/myhal_simulator/tours/L_tour/: map.txt
src/myhal_simulator/tours/M_tour/: map.txt
src/myhal_simulator/tours/explore2/: map.txt
src/myhal_simulator/tours/explore_tour/: map.txt
src/myhal_simulator/worlds/: myhal_sim.world  myhal_template.txt
src/world_generator/: CMakeLists.txt  package.xml
src/world_generator/launch/: test.launch
src/world_generator/src/: math_utilities.cpp  maze.cpp  objects.cpp  world_master.cpp
src/world_generator/worlds/: base.world
(+46 files in other folders)
